adding css file. notes in html templates

--- a/server/app/templates/layouts/base.html
+++ b/server/app/templates/layouts/base.html
@@ -8,6 +8,7 @@
     integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
     crossorigin="anonymous"
   ></script>
+  {# FIXME: This changing this to what is on the site messes up UI colors #}
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-100 dark:bg-slate-600">
