--- a/server/app/templates/layouts/authenticated.html
+++ b/server/app/templates/layouts/authenticated.html
@@ -151,6 +151,7 @@
               aria-orientation="vertical"
               aria-labelledby="user-menu-button"
               tabindex="-1"
+              hidden
             >
               <!-- Active: "bg-gray-100", Not Active: "" -->
               <a
