--- a/server/app/templates/layouts/authenticated.html
+++ b/server/app/templates/layouts/authenticated.html
@@ -67,25 +67,15 @@
             <div class="flex space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
               <a
-                href="#"
+                href="{{ url_for('dashboard') }}"
                 class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                 aria-current="page"
               >Dashboard</a
               >
               <a
-                href="#"
+                href="{{ url_for('chat') }}"
                 class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Team</a
-              >
-              <a
-                href="#"
-                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Projects</a
-              >
-              <a
-                href="#"
-                class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-              >Calendar</a
+              >Chat</a
               >
             </div>
           </div>
