--- a/server/app/templates/layouts/base.html
+++ b/server/app/templates/layouts/base.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-100 dark:bg-slate-600">
-<div id="content">
+<div id="content" class="min-h-screen">
   {% block content %}{% endblock %}
 </div>
 <footer id="footer" class="sticky bottom-0">
